2010-01-18  BVK Chaitanya  <bvk.groups@gmail.com>

	Added new tool, grub-scrit-check to verify grub.cfg syntax.

	* util/grub-script-check.c: grub-script-check tool.
	* conf/common.rmk: Make rules for grub-script-check.

2010-01-18  Robert Millan  <rmh.grub@aybabtu.com>

	Fix annoying UI bug in rescue mode.  Thanks to Tristan Gingold for
	spotting it back in 2008.  Shame on me for forgetting he did.

	* kern/rescue_reader.c (grub_rescue_run): Skip zero-length lines.

2010-01-18  Robert Millan  <rmh.grub@aybabtu.com>

	* include/grub/i386/linux.h (GRUB_VIDEO_TYPE_TEXT): Rename to ...
	(GRUB_VIDEO_LINUX_TYPE_TEXT): ... this.  Update all users.
	(GRUB_VIDEO_TYPE_VLFB): Rename to ...
	(GRUB_VIDEO_LINUX_TYPE_VESA): ... this.  Update all users.
	(GRUB_VIDEO_TYPE_EFI): Rename to ...
	(GRUB_VIDEO_LINUX_TYPE_SIMPLE): ... this.  Update all users.

2010-01-17  Robert Millan  <rmh.grub@aybabtu.com>

	* include/grub/test.h: Add license header.
	* tests/example_functional_test.c: Likewise.
	* tests/example_unit_test.c: Likewise.
	* tests/lib/functional_test.c: Likewise.
	* tests/lib/test.c: Likewise.
	* tests/lib/unit_test.c: Likewise.

2010-01-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Use flag-based instead of hook-based video mode selection and "auto"
	keyword.

	* include/grub/video.h (grub_video_adapter): Changed 'setup' member.
	(grub_video_set_mode): Changed prototype. All users updated.
	(grub_video_check_mode_flag): New inline function.
	* video/video.c (parse_modespec): New function.
	(grub_video_set_mode): Parse flags and keywords.

2010-01-17  Carles Pina i Estany  <carles@pina.cat>

	* util/misc.c (grub_util_info): Fix the order of the parameters in a
	fprintf call.

2010-01-16  Grégoire Sutre <gregoire.sutre@gmail.com>

	* genmk.rb (class SCRIPT): Replace option -i of sed by a pipe.

2010-01-16  Carles Pina i Estany  <carles@pina.cat>

	* util/grub-editenv.c (usage): Use `program_name' instead of hardcoded
	string.
	* util/grub-emu.c (usage): Likewise.